--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "history-navigation",
   "displayName": "History Navigation",
   "description": "Navigate through the list of the recent editors",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "gabry",
   "engines": {
     "vscode": "^1.21.0"
@@ -16,6 +16,14 @@
   "main": "./out/extension",
   "contributes": {
     "commands": [
+      {
+        "command": "historynavigation.goToNextChange",
+        "title": "5 - Next Edit Location",
+        "icon": {
+          "light": "./media/lnr-arrow-right.svg",
+          "dark": "./media/lnr-arrow-right-white.svg"
+        }
+      },
       {
         "command": "historynavigation.goToNextEditor",
         "title": "4 - Next Editor",
@@ -42,7 +50,7 @@
       },
       {
         "command": "historynavigation.goToPreviousChange",
-        "title": "1 - Last Edit Location",
+        "title": "1 - Previous Edit Location",
         "icon": {
           "light": "./media/lnr-arrow-left.svg",
           "dark": "./media/lnr-arrow-left-white.svg"
@@ -51,6 +59,11 @@
     ],
     "menus": {
       "editor/title": [
+        {
+          "when": "textInputFocus",
+          "command": "historynavigation.goToNextChange",
+          "group": "navigation"
+        },
         {
           "when": "textInputFocus",
           "command": "historynavigation.goToNextEditor",
