--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "history-navigation",
   "displayName": "History Navigation",
   "description": "Navigate through the list of the recent editors",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "publisher": "gabry",
   "engines": {
-    "vscode": "^1.21.0"
+    "vscode": "^1.34.0"
   },
   "categories": [
     "Other"
@@ -95,10 +95,11 @@
     "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6",
-    "tslint": "^5.8.0",
-    "@types/node": "^7.0.43",
-    "@types/mocha": "^2.2.42"
-  }
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^8.10.25",
+    "tslint": "^5.11.0",
+    "typescript": "^3.5.3",
+    "vscode": "^1.1.34"
+  },
+  "dependencies": {}
 }
